unpackaged/main/default/objects/pro_Rebate__c/pro_Rebate__c.object-meta.xml
<CustomObject>
    <label>Rebate</label>
    <nameField>
        <displayFormat>RB-{0000000}</displayFormat>
        <label>Rebate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>