unpackaged/main/default/objects/pro_Rebate__c/fields/Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Method__c</fullName>
    <label>Calculation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat</fullName>
                <default>true</default>
                <label>Flat</label>
            </value>
            <value>
                <fullName>Tiered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>