unpackaged/main/default/objects/pro_Rebate__c/fields/pro_Account__c.field-meta.xml
<CustomField>
    <fullName>pro_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rebates</relationshipLabel>
    <relationshipName>Rebates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>