unpackaged/main/default/objects/pro_Rebate__c/fields/pro_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>pro_Cancelled__c</fullName>
    <label>Cancelled ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>