unpackaged/main/default/objects/pro_Rebate__c/fields/pro_Current_Rebate__c.field-meta.xml
<CustomField>
    <fullName>pro_Current_Rebate__c</fullName>
    <label>Current Rebate ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>