unpackaged/main/default/objects/pro_Rebate__c/fields/pro_Current_Rebate_RUS__c.field-meta.xml
<CustomField>
    <fullName>pro_Current_Rebate_RUS__c</fullName>
    <label>Current Rebate ($)</label>
    <summarizedField>pro_Rebate_Rate__c.pro_Rebate_Calculation_Currency__c</summarizedField>
    <summaryForeignKey>pro_Rebate_Rate__c.pro_Rebate__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>