unpackaged/main/default/objects/pro_Rebate__c/fields/pro_In_Repair__c.field-meta.xml
<CustomField>
    <fullName>pro_In_Repair__c</fullName>
    <label>In Repair ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>