unpackaged/main/default/objects/pro_Rebate__c/fields/pro_Open__c.field-meta.xml
<CustomField>
    <fullName>pro_Open__c</fullName>
    <label>Open ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>