unpackaged/main/default/objects/pro_Rebate__c/fields/pro_Received__c.field-meta.xml
<CustomField>
    <fullName>pro_Received__c</fullName>
    <label>Received ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>