unpackaged/main/default/objects/pro_Rebate__c/fields/pro_Released__c.field-meta.xml
<CustomField>
    <fullName>pro_Released__c</fullName>
    <label>Released ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>