unpackaged/main/default/objects/pro_Rebate__c/fields/pro_Shipped__c.field-meta.xml
<CustomField>
    <fullName>pro_Shipped__c</fullName>
    <label>Shipped ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>