unpackaged/main/default/objects/pro_Rebate__c/fields/pro_Vouchered__c.field-meta.xml
<CustomField>
    <fullName>pro_Vouchered__c</fullName>
    <label>Vouchered ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>